[package]
name = "park"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
futures-util = "0.3.30"
har = "0.8.0"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
serde = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7"] }
